# ai-learning

./: .env.example  .gitignore  .prettierignore  .release-please-manifest.json  ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT.md  README.md  index.html  justfile  package-lock.json  package.json  playwright.config.ts  release-please-config.json  resume-blurbs.md  vite.config.ts  vitest.config.ts  启动AI学堂.bat
backend/: requirements.txt
e2e/: analytics.spec.ts  course.spec.ts  document.spec.ts  helpers.ts  integration.spec.ts  onboarding.spec.ts  progress.spec.ts  quiz.spec.ts  search.spec.ts  (+2 more)
src-tauri/: CHANGELOG.md  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/seed_data/lessons/: lesson-02-machine-learning.md  lesson-03-neural-networks.md  lesson-04-applications.md  lesson-05-ethics.md
src-tauri/seed_data/quizzes/: quiz-02.json  quiz-03.json  quiz-04.json  quiz-05.json
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: analytics.rs  chat.rs  config_cmd.rs  courses.rs  dashboard.rs  documents.rs  imports.rs  knowledge_graph.rs  mod.rs  progress.rs  recommendation.rs  search.rs  skill_assessment.rs  usage_analyzer_cmd.rs  user.rs
src-tauri/src/db/: migrations.rs  mod.rs  seed.rs
src-tauri/src/models/: chat.rs  course.rs  dashboard.rs  imports.rs  learning_path.rs  mod.rs  progress.rs  usage_profile.rs  user.rs  user_profile.rs
src-tauri/src/services/: ai_tutor.rs  analytics.rs  chat_service.rs  course_importer.rs  doc_parser.rs  feed_importer.rs  github_importer.rs  knowledge_graph.rs  llm_client.rs  mcp_server.rs  memory_bridge.rs  mod.rs  profile_builder.rs  quiz_grader.rs  recommendation.rs  search.rs  skill_assessor.rs  usage_analyzer.rs
src-tauri/tests/: chat_prompt_test.rs  chat_stream_test.rs  dashboard_progress_test.rs  import_test.rs  integration_test.rs
src-tauri/tests/common/: mod.rs
(+82 files in other folders)
