[package]
name = "ai-learning-platform"
version = "0.2.0"
description = "AI Learning Platform - Interactive AI Education Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "ai_learning_platform_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
dotenvy = "0.15"
scraper = "0.20"
feed-rs = "2"
tiny_http = "0.12"
